force-app/main/default/objects/IntegracionSharePoint__mdt/IntegracionSharePoint__mdt.object-meta.xml
<CustomObject>
    <label>IntegracionSharePoint</label>
    <pluralLabel>IntegracionSharePoints</pluralLabel>
</CustomObject>