force-app/main/default/objects/IntegracionSharePoint__mdt/fields/audiencePrincipalId__c.field-meta.xml
<CustomField>
    <fullName>audiencePrincipalId__c</fullName>
    <label>audiencePrincipalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>