force-app/main/default/objects/IntegracionSharePoint__mdt/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <label>base_url</label>
    <length>100</length>
    <type>Text</type>
</CustomField>