force-app/main/default/objects/IntegracionSharePoint__mdt/fields/baseURL__c.field-meta.xml
<CustomField>
    <fullName>baseURL__c</fullName>
    <label>baseURL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>