force-app/main/default/objects/IntegracionSharePoint__mdt/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <type>TextArea</type>
</CustomField>