force-app/main/default/objects/IntegracionSharePoint__mdt/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client_secret</label>
    <type>TextArea</type>
</CustomField>