force-app/main/default/objects/IntegracionSharePoint__mdt/fields/endpointSP__c.field-meta.xml
<CustomField>
    <fullName>endpointSP__c</fullName>
    <label>endpointSP</label>
    <length>150</length>
    <type>Text</type>
</CustomField>