force-app/main/default/objects/IntegracionSharePoint__mdt/fields/grant_type__c.field-meta.xml
<CustomField>
    <fullName>grant_type__c</fullName>
    <label>grant_type</label>
    <type>TextArea</type>
</CustomField>