force-app/main/default/objects/IntegracionSharePoint__mdt/fields/site_realm__c.field-meta.xml
<CustomField>
    <fullName>site_realm__c</fullName>
    <label>site_realm</label>
    <type>TextArea</type>
</CustomField>