force-app/main/default/objects/IntegracionSharePoint__mdt/fields/urlSP__c.field-meta.xml
<CustomField>
    <fullName>urlSP__c</fullName>
    <label>urlSP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>